--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
@@ -10,7 +10,7 @@
             <div class="dropdown-wrapper">
               <mat-form-field class="select-slab-mat" appearance="outline">
                 <mat-label>Vou Type</mat-label>
-                <mat-select #select formControlName="VouType" placeholder="Select VouType" (selectionChange)="getVoucherList($event)" panelClass="custom-select-panel">
+                <mat-select [disabled]="voucherForm.get('vouMasterId').value !== 0" #select formControlName="VouType" placeholder="Select VouType" (selectionChange)="getVoucherList()" panelClass="custom-select-panel">
                   <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputVouTypeListChange($event)"/>
                   <mat-option *ngFor="let option of filteredVouTypeList" [value]="option.id">
                     {{ option.name }}
@@ -23,7 +23,7 @@
             <div class="dropdown-wrapper">
               <mat-form-field appearance="outline" class="calendar">
                 <mat-label>VouDate</mat-label>
-                <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate" (ngModelChange)="getVoucherList($event)">
+                <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate" (ngModelChange)="getVoucherList()">
                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2></mat-datepicker>
               </mat-form-field>
