--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
@@ -23,7 +23,7 @@
             <div class="dropdown-wrapper">
               <mat-form-field appearance="outline" class="calendar">
                 <mat-label>VouDate</mat-label>
-                <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate" (ngModelChange)="getVoucherList($event)">
+                <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate" (ngModelChange)="getVoucherList()">
                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2></mat-datepicker>
               </mat-form-field>
