--- a/ClientApp/src/app/Forms/Master/sharing-setup/sharing-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/sharing-setup/sharing-setup.component.html
@@ -81,10 +81,10 @@
           <mat-icon class="lock-icon">lock</mat-icon>
         </button>
         <button mat-raised-button matTooltip="Modify Sahring" matTooltipPosition="above" color="accent" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog()" class="icon-btn ml-15">
-          <mat-icon class="edit-icon">edit</mat-icon>
+          <mat-icon class="edit-icon">exposure</mat-icon>
         </button>
         <button mat-raised-button color="accent" matTooltip="Add Sharing" matTooltipPosition="above" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
-          <mat-icon>add</mat-icon>
+          <mat-icon>add_to_queue</mat-icon>
         </button>
       </div>
     </div>
@@ -102,4 +102,3 @@
         </ag-grid-angular>
       </div>
     </div>  
-  
