--- a/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/sub-brokerage-setup/sub-brokerage-setup.component.html
@@ -95,10 +95,10 @@
           <mat-icon class="lock-icon">lock</mat-icon>
         </button>
         <button mat-raised-button color="accent" matTooltip="Modify Sub Brokerage" matTooltipPosition="above" [disabled]="!areRequiredValuesSelected()" (click)="openModifySetupDialog()" class="icon-btn">
-          <mat-icon class="edit-icon">edit</mat-icon>
+          <mat-icon class="edit-icon">exposure</mat-icon>
         </button>
         <button mat-raised-button color="accent" matTooltip="Add Sub Brokerage" matTooltipPosition="above" [disabled]="!areRequiredValuesSelected()" (click)="openSlabDetailsDialog('add')" class="icon-btn">
-          <mat-icon>add</mat-icon>
+          <mat-icon>add_to_queue</mat-icon>
         </button>
       </div>
     </div>
@@ -116,4 +116,3 @@
         </ag-grid-angular>
       </div>
     </div>  
-  
