--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.scss
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.scss
@@ -6,3 +6,11 @@
     margin-left: 7px;
     display: inline-block;
 }
+
+.red-text {
+    color: red;
+  }
+  
+  .green-text {
+    color: green;
+  }
