--- a/ClientApp/src/app/Forms/Master/account/account-dialog/brokerage-tab/brokerage-tab.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/brokerage-tab/brokerage-tab.component.html
@@ -1,130 +1,6 @@
-<form [formGroup]="brokerageForm" (ngSubmit)="onBrokerageSave(brokerageForm.value)" fxLayout="row wrap" class="user-form">
-    <div class="tab-tax-details-parent tab-party-details-parent">
-      <div class="white-block pb-0">
-        <h3><span>Brokerage</span></h3>
 
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>Exchange </mat-label>
-            <mat-select placeholder="Select Exchange" formControlName="exchangeId">
-              <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
-                {{exchange.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>InstrumentType </mat-label>
-            <mat-select placeholder="Select instrument" formControlName="instrumentType">
-              <mat-option *ngFor="let ins of instrumentList" [value]="ins.id">
-                {{ins.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>Item</mat-label>
-
-            <mat-select placeholder="Select Item" formControlName="itemId">
-              <!--<input (keyup)="onKey($event.target.value)">-->
-              <mat-option *ngFor="let item of itemList" [value]="item.id">
-                {{item.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>ApplyOn</mat-label>
-
-            <mat-select placeholder="Select ApplyOn" formControlName="applyOn">
-              <!--<input (keyup)="onKey($event.target.value)">-->
-              <mat-option *ngFor="let item of brokApplyOn" [value]="item.id">
-                {{item.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>ApplyOnQTY</mat-label>
-
-            <mat-select placeholder="Select ApplyOnQty" formControlName="applyOnQty">
-              <!--<input (keyup)="onKey($event.target.value)">-->
-              <mat-option *ngFor="let item of brokApplyOnQty" [value]="item.id">
-                {{item.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field appearance="outline">
-            <mat-label>DeliveryBrokeRate</mat-label>
-            <input matInput autocomplete="off" placeholder="item Code" formControlName="deliveryBrokRate" type="number">
-            <mat-error *ngIf="brokerageForm.controls.deliveryBrokRate.errors?.required">DeliveryBrokeRate is required</mat-error>
-          </mat-form-field>
-        </div>
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field appearance="outline">
-            <mat-label>IntraDayBrokeRate</mat-label>
-            <input matInput autocomplete="off" placeholder="item Code" formControlName="intradayBrokRate" type="number">
-            <mat-error *ngIf="brokerageForm.controls.intradayBrokRate.errors?.required">IntraDayBrokeRate is required</mat-error>
-          </mat-form-field>
-        </div>
-
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field appearance="outline">
-            <mat-label>From</mat-label>
-            <input matInput [matDatepicker]="brokpicker1" formControlName="fromDt">
-            <mat-datepicker-toggle matSuffix [for]="brokpicker1"></mat-datepicker-toggle>
-            <mat-datepicker #brokpicker1></mat-datepicker>
-          </mat-form-field>
-        </div>
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field appearance="outline">
-            <input matInput [matDatepicker]="brokpicker2" placeholder="To" formControlName="toDt">
-            <mat-datepicker-toggle matSuffix [for]="brokpicker2"></mat-datepicker-toggle>
-            <mat-datepicker #brokpicker2></mat-datepicker>
-          </mat-form-field>
-        </div>
-
-        
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field appearance="outline">
-            <mat-label>Range1</mat-label>
-            <input matInput autocomplete="off" placeholder="Range2" formControlName="rateRange1" type="number">
-            <mat-error *ngIf="brokerageForm.controls.rateRange1.errors?.required">Range1 is required</mat-error>
-          </mat-form-field>
-        </div>
-
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-          <mat-form-field appearance="outline">
-            <mat-label>Range2</mat-label>
-            <input matInput autocomplete="off" placeholder="Range" formControlName="rateRange2" type="number">
-            <mat-error *ngIf="brokerageForm.controls.rateRange2.errors?.required">Range2 is required</mat-error>
-          </mat-form-field>
-        </div>
-
-        <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-5 pb-5 pl-10">
-          <mat-checkbox formControlName="intradaySingleSideonly">Intradaysingleside</mat-checkbox>
-        </div>
-
-
-      </div>
-      <div fxFlex="100" class="mt-2 text-center space-between-btns">
-        <button mat-raised-button color="warn" type="button" (click)="close()">Cancel</button>
-        <button mat-raised-button color="primary" class="uppercase" [disabled]="!brokerageForm.valid" type="submit">Save</button>
-      </div>
-    </div>
-  </form>
   <div class="col-xl-12 mt-2">
-    <ag-grid-angular style=" height: 250px;"
+    <ag-grid-angular style=" height: 250px; width: 1200px;"
                      class="ag-theme-material"
                      [rowData]="brokerageList"
                      [pagination]="true"
