--- a/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account-dialog/add-account.component.html
@@ -31,8 +31,8 @@
               <mat-error *ngIf="personalForm.controls.OpeningBal.errors?.required">OpeningBal is required</mat-error>
             </mat-form-field>
             <mat-radio-group formControlName="DrCr">
-              <mat-radio-button value="D" class="mx-1 pl-10" checked>Dr.</mat-radio-button>
-              <mat-radio-button value="C" class="ml-15">Cr.</mat-radio-button>
+              <mat-radio-button value="DR" class="mx-1 pl-10" checked>Dr.</mat-radio-button>
+              <mat-radio-button value="CR" class="ml-15">Cr.</mat-radio-button>
             </mat-radio-group>
           </div>
           <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
