--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -37,11 +37,17 @@ body {
 .mb-0 {
     margin-bottom: 0 !important;
 }
+.mt-4 {
+    margin-top: 4px !important;
+}
 .ml-7 {
     margin-left: 7px !important;
 }
 .ml-15 {
     margin-left: 15px !important;
+}
+.mt-20 {
+    margin-top: 20px !important;
 }
 .mb-10 {
     margin-bottom: 10px !important;
@@ -573,6 +579,9 @@ input {
                 .mat-form-field-infix {
                     width: auto;
                 }
+                &.wider-width {
+                    width: 100%;
+                }
             }
         }
         .mat-expansion-panel-header {
@@ -682,8 +691,8 @@ input {
 
 }
 .ag-header-cell-text {
-  font-size:10px;
-  font-weight:700;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 .btn-group {
