--- a/ClientApp/src/app/Forms/Master/item-group/add-item-group/add-item-group.component.scss
+++ b/ClientApp/src/app/Forms/Master/item-group/add-item-group/add-item-group.component.scss
@@ -1,3 +1,13 @@
 .save-btn{
     height: 34px;
 }
+
+.red-text {
+    color: red;
+    div {
+        color: red !important;
+    }
+    .mat-simple-snack-bar-content{
+        color: red !important;
+    }
+  }
