--- a/ClientApp/src/app/Forms/Reports/trail-balance/trail-balance.component.html
+++ b/ClientApp/src/app/Forms/Reports/trail-balance/trail-balance.component.html
@@ -19,7 +19,7 @@
         <div class="dropdown-container">
           <div class="dropdown-wrapper">
             <mat-form-field appearance="outline" class="calendar">
-              <mat-label>From</mat-label>
+              <mat-label>Date</mat-label>
               <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt" (ngModelChange)="onFromDateChange()">
               <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
               <mat-datepicker #picker1></mat-datepicker>
@@ -43,7 +43,8 @@
                          [defaultColDef]="agGridOptions.defaultColDef"
                          (cellClicked)="onGridClick($event)"
                          (gridReady)="onGridReady($event)"
-                          headerHeight="34">
+                          headerHeight="34"
+                          domLayout="autoHeight">
         </ag-grid-angular>
       </div>
     </div>  
