--- a/ClientApp/src/app/theme/components/sidenav/sidenav.component.html
+++ b/ClientApp/src/app/theme/components/sidenav/sidenav.component.html
@@ -9,7 +9,7 @@
     </svg>  
 </mat-toolbar>
 
-<div fxLayout="column" fxLayoutAlign="center center" class="user-block transition-2" [class.show]="settings.sidenavUserBlock"> 
+<!-- <div fxLayout="column" fxLayoutAlign="center center" class="user-block transition-2" [class.show]="settings.sidenavUserBlock"> 
     <div [fxLayout]="(settings.menuType != 'default') ? 'column' : 'row'" 
          [fxLayoutAlign]="(settings.menuType != 'default') ? 'center center' : 'space-around center'" class="user-info-wrapper">
         <img [src]="userImage" alt="user-image">
@@ -27,7 +27,7 @@
             <mat-icon>power_settings_new</mat-icon>
         </a>
     </div>
-</div>
+</div> -->
 
 <perfect-scrollbar class="sidenav-menu-outer" [class.user-block-show]="settings.sidenavUserBlock">
     <div id="vertical-menu">
