--- a/ClientApp/src/app/Forms/Reports/trail-balance/trail-balance.component.html
+++ b/ClientApp/src/app/Forms/Reports/trail-balance/trail-balance.component.html
@@ -1,5 +1,17 @@
 <div class="row trail-balance">
     <div class="mt-2">
+        <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+            <div class="dropdown-container">
+              <div class="dropdown-wrapper">
+                <mat-form-field appearance="outline" class="calendar">
+                  <mat-label>As On Date</mat-label>
+                  <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt">
+                  <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                  <mat-datepicker #picker1></mat-datepicker>
+                </mat-form-field>
+              </div>
+            </div>
+          </div>
       <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
         <div class="dropdown-container">
           <div class="dropdown-wrapper">
@@ -11,18 +23,6 @@
                   {{ option.name }}
                 </mat-option>
               </mat-select>
-            </mat-form-field>
-          </div>
-        </div>
-      </div>
-      <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
-        <div class="dropdown-container">
-          <div class="dropdown-wrapper">
-            <mat-form-field appearance="outline" class="calendar">
-              <mat-label>Date</mat-label>
-              <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt">
-              <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-              <mat-datepicker #picker1></mat-datepicker>
             </mat-form-field>
           </div>
         </div>
