--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -734,7 +734,7 @@ input {
 /* component-styles.css or your styles file */
 .trail-balance{
     .red-text {
-        color: red;
+        color: #ff4848;
         text-align: right;
       }
 
