Resolved build error

--- a/ClientApp/src/app/Forms/User/invite-user/invite-user.component.html
+++ b/ClientApp/src/app/Forms/User/invite-user/invite-user.component.html
@@ -4,7 +4,7 @@
       <mat-icon>close</mat-icon>
     </span>
 </a>
-<form [formGroup]="inviteUserForm" (ngSubmit)="onSubmit(inviteUserForm.value)" fxLayout="row wrap" class="user-form">
+<form [formGroup]="inviteUserForm"  fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
         <h3><span>Item</span></h3>
         <div class="tab-party-details-parent">
