--- a/ClientApp/src/app/Forms/User/user.component.html
+++ b/ClientApp/src/app/Forms/User/user.component.html
@@ -5,7 +5,7 @@
       </button>
     </div>
 </div>
-<mat-tab-group (selectedTabChange)="handleTabChange($event)">
+<mat-tab-group>
     <mat-tab label="Users">
         Users
     </mat-tab>
