--- a/ClientApp/src/app/Forms/Reports/ledger-report/ledger-report.component.html
+++ b/ClientApp/src/app/Forms/Reports/ledger-report/ledger-report.component.html
@@ -5,7 +5,7 @@
               <div class="dropdown-wrapper">
                 <mat-form-field appearance="outline" class="calendar">
                   <mat-label>From</mat-label>
-                  <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt" (ngModelChange)="onFromDateChange()">
+                  <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt">
                   <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                   <mat-datepicker #picker1></mat-datepicker>
                 </mat-form-field>
