--- a/ClientApp/src/app/Forms/User/user.component.html
+++ b/ClientApp/src/app/Forms/User/user.component.html
@@ -15,6 +15,7 @@
                         [pagination]="true"
                         [columnDefs]="columnDefs"
                         [defaultColDef]="agGridOptions.defaultColDef"
+                        (cellClicked)="onGridClick($event)"
                         headerHeight="34">
       </ag-grid-angular>
     </div>
