--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -732,7 +732,7 @@ input {
     }
 }
 /* component-styles.css or your styles file */
-.trail-balance{
+.sub-ledger-report, .trail-balance{
     .red-text {
         color: #ff4848;
         text-align: right;
