--- a/ClientApp/src/app/Forms/Reports/ledger-report/ledger-report.component.html
+++ b/ClientApp/src/app/Forms/Reports/ledger-report/ledger-report.component.html
@@ -1,67 +1,157 @@
 <div class="row trail-balance">
-    <div class="mt-2">
-        <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
-            <div class="dropdown-container">
-              <div class="dropdown-wrapper">
-                <mat-form-field appearance="outline" class="calendar">
-                  <mat-label>From</mat-label>
-                  <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt">
-                  <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                  <mat-datepicker #picker1></mat-datepicker>
-                </mat-form-field>
-              </div>
-            </div>
-          </div>
-          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
-            <div class="dropdown-container">
-              <div class="dropdown-wrapper">
-                <mat-form-field appearance="outline" class="calendar">
-                    <mat-label>To</mat-label>
-                  <input matInput [matDatepicker]="picker2" placeholder="To" [(ngModel)]="toDt">
-                  <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                  <mat-datepicker #picker2></mat-datepicker>
-                </mat-form-field>
-              </div>
-            </div>
-          </div>
-          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
-            <div class="dropdown-container">
-              <div class="dropdown-wrapper">
+  <div class="mt-2">
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+      <div class="dropdown-container">
+        <div class="dropdown-wrapper">
+          <mat-form-field appearance="outline" class="calendar">
+            <mat-label>From</mat-label>
+            <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt" />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker1"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+      <div class="dropdown-container">
+        <div class="dropdown-wrapper">
+          <mat-form-field appearance="outline" class="calendar">
+            <mat-label>To</mat-label>
+            <input
+              matInput
+              [matDatepicker]="picker2"
+              placeholder="To"
+              [(ngModel)]="toDt"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker2"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker2></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+      <div class="dropdown-container">
+        <div class="dropdown-wrapper">
+          <mat-form-field class="select-slab-mat" appearance="outline">
+            <mat-label>Select Branch</mat-label>
+            <mat-select
+              #select
+              [(ngModel)]="branchIds"
+              placeholder="Select Branch"
+              (selectionChange)="onBranchChange($event)"
+              panelClass="custom-select-panel"
+            >
+              <input
+                class="milti-search-box"
+                #multiUserSearch
+                type="text"
+                autocomplete="off"
+                matInput
+                placeholder="Search Branch"
+                (input)="onInputChange($event)"
+              />
+              <mat-option
+                *ngFor="let option of filteredProviders"
+                [value]="option.id"
+              >
+                {{ option.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+      <div class="dropdown-container">
+        <div class="dropdown-wrapper">
+          <mat-form-field class="select-slab-mat" appearance="outline">
+            <mat-label>Select Account</mat-label>
+            <mat-select
+              #selectAccount
+              [(ngModel)]="accountIds"
+              multiple
+              placeholder="Select Account"
+              panelClass="custom-select-panel"
+            >
+              <input
+                class="milti-search-box"
+                #multiUserSearch
+                type="text"
+                autocomplete="off"
+                matInput
+                placeholder="Search Account"
+                (input)="onInputAccountListChange($event)"
+              />
+              <mat-option value="-1" (click)="accountAllSelection()"
+                >Select All</mat-option
+              >
+              <mat-option
+                *ngFor="let option of filteredAccountList"
+                [value]="option.id"
+              >
+                {{ option.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+        <div class="dropdown-container">
+            <div class="dropdown-wrapper">
                 <mat-form-field class="select-slab-mat" appearance="outline">
-                  <mat-label>Select Account</mat-label>          
-                  <mat-select #selectAccount [(ngModel)]="accountIds" multiple placeholder="Select Account" panelClass="custom-select-panel">
-                    <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)"/>
-                    <mat-option value=-1 (click)="accountAllSelection()">Select All</mat-option>
-                    <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
+                  <mat-label>Vou Type</mat-label>  
+                  <mat-select #selectVouType  [(ngModel)]="vouTypeIds" multiple placeholder="Select VouType" panelClass="custom-select-panel">
+                    <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputVouTypeListChange($event)"/>
+                    <mat-option value=-1 (click)="vouTypeAllSelection()">Select All</mat-option>
+                    <mat-option *ngFor="let option of filteredVouTypeList" [value]="option.id">
                       {{ option.name }}
                     </mat-option>
                   </mat-select>
                 </mat-form-field>
               </div>
-            </div>
-          </div>
-      <div fxFlex="100" fxFlex.gt-sm="7" fxFlex.sm="7">
-        <button mat-raised-button color="primary" (click)="getBrokerageSetupList()" [disabled]="!areRequiredValuesSelected()" class="search-icon-btn">
-          <mat-icon>search</mat-icon>
-        </button>
+        </div>
       </div>
+      <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+        <mat-slide-toggle [(ngModel)]="includeOpBal" color="primary">Include OpBal</mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="withinterest" color="primary">With Interest</mat-slide-toggle>
+      </div>
+    <div fxFlex="100" fxFlex.gt-sm="7" fxFlex.sm="7">
+      <button
+        mat-raised-button
+        color="primary"
+        (click)="getBrokerageSetupList()"
+        [disabled]="!areRequiredValuesSelected()"
+        class="search-icon-btn"
+      >
+        <mat-icon>search</mat-icon>
+      </button>
     </div>
-      <div class="col-xl-12 mt-2">
-        <ag-grid-angular 
-            style=" height: 535px;"
-            class="ag-theme-material"
-            [rowData]="brokeragesetupList"
-            [pagination]="true"
-            [rowHeight]="31"
-            [columnDefs]="columnDefs"
-            [defaultColDef]="agGridOptions.defaultColDef"
-            (gridReady)="onGridReady($event)"
-            headerHeight="34"
-            [groupUseEntireRow]="agGridOptions.groupUseEntireRow"
-            [groupRowAggNodes]="agGridOptions.groupRowAggNodes"
-            [autoGroupColumnDef]="agGridOptions.autoGroupColumnDef"
-            domLayout="autoHeight">
-        </ag-grid-angular>
-      </div>
-    </div>  
-  
+  </div>
+  <div class="col-xl-12 mt-2">
+    <ag-grid-angular
+      style="height: 735px"
+      class="ag-theme-material"
+      [rowData]="brokeragesetupList"
+      [pagination]="true"
+      [rowHeight]="31"
+      [columnDefs]="columnDefs"
+      [defaultColDef]="agGridOptions.defaultColDef"
+      (gridReady)="onGridReady($event)"
+      (cellClicked)="onCellClicked($event)"
+      headerHeight="34"
+      [groupUseEntireRow]="agGridOptions.groupUseEntireRow"
+      [groupRowAggNodes]="agGridOptions.groupRowAggNodes"
+      [autoGroupColumnDef]="agGridOptions.autoGroupColumnDef"
+      domLayout="autoHeight"
+    >
+    </ag-grid-angular>
+  </div>
+</div>
