--- a/ClientApp/src/app/Forms/Imports/scripts/scripts.component.html
+++ b/ClientApp/src/app/Forms/Imports/scripts/scripts.component.html
@@ -1,1 +1,10 @@
-<p>scripts works!</p>
+<ngx-dropzone (change)="onSelect($event)">
+  <ngx-dropzone-label>Drop File here </ngx-dropzone-label>
+  <ngx-dropzone-preview *ngFor="let f of files" [multiple]='true' [removable]="true" (removed)="onRemove(f)">
+    <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+  </ngx-dropzone-preview>
+</ngx-dropzone>
+
+<button mat-raised-button color="primary" type="button" (click)="submit()">
+  <mat-icon>add</mat-icon>
+</button>
