--- a/ClientApp/src/app/Forms/User/change-password/change-password.component.html
+++ b/ClientApp/src/app/Forms/User/change-password/change-password.component.html
@@ -20,10 +20,16 @@
             <input matInput autocomplete="off" placeholder="New Password" formControlName="NewPassword" type="text">
           </mat-form-field>
       </div>
+      <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
+        <mat-form-field class="example-full-width" appearance="outline">
+          <mat-label>Confirm Password</mat-label>
+            <input matInput autocomplete="off" placeholder="Confirm Password" formControlName="ConfirmPassword" type="text">
+          </mat-form-field>
+      </div>
     </div>
   </div>
-  <!-- <div fxFlex="100" class="mt-2 text-center space-between-btns">
+  <div fxFlex="100" class="mt-2 text-center space-between-btns">
     <button mat-raised-button color="warn" (click)="close()">Cancel</button>            
     <button mat-raised-button color="primary" class="uppercase" [disabled]="!changePasswordForm.valid" type="submit">Save</button> 
-  </div> -->
+  </div>
 </form>
